# DumpAnalysisMCP

./: .gitignore  README.md  pyproject.toml
examples/cpp-crash-sample-1/: README.md  main.cpp
examples/cpp-crash-sample-2/: CppConsoleApplication.cpp  CppConsoleApplication.dmp  README.md
examples/cpp-crash-sample-3/: CppConsoleApplication.cpp  CppConsoleApplication.dmp  README.md
examples/cpp-crash-sample-4/: CppConsoleApplication.cpp  CppConsoleApplication.dmp  README.md
examples/cpp-crash-sample-4/Core/Math/: Vector3.h
examples/cpp-crash-sample-4/Engine/Crash/: CrashDumpWriter.cpp  CrashDumpWriter.h
examples/cpp-crash-sample-4/Game/AI/: AIController.cpp  AIController.h
examples/cpp-crash-sample-4/Game/Actors/: Character.cpp  Character.h
examples/cpp-crash-sample-4/Game/Components/: SkeletalMeshComponent.cpp  SkeletalMeshComponent.h  TransformComponent.cpp  TransformComponent.h
examples/cpp-crash-sample-4/Game/Systems/: CombatSystem.cpp  CombatSystem.h  NavigationSystem.cpp  NavigationSystem.h
examples/cpp-crash-sample-4/Game/World/: GameWorld.cpp  GameWorld.h
src/windows_dump_analysis_mcp/: __init__.py  __main__.py  analyzer.py  code_context.py  command_policy.py  config.py  errors.py  execution.py  logging_utils.py  patching.py  server.py  session_store.py  tools.py
tests/: test_apply_patch_tool.py  test_build_and_test_tools.py  test_command_policy.py  test_config.py  test_dump_analyzer_core.py  test_e2e_mvp_flow.py  test_errors.py  test_mcp_resources_and_stdio.py  test_smoke.py  test_source_context_and_search.py
